--- a/index.html
+++ b/index.html
@@ -4,15 +4,10 @@
     <head>
         <meta charset:"utf-8">
         <title>Rock Paper Scissors</title>
+        <script src="script/script.js"></script>
     </head>
 
     <body>
-
-    <script>
-            
-
-
-    </script>
     
     </body>
 
